// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Card/Content WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       class="_cardContent_48t19_1 dummyClassname"
       lang="en"
       data-testid="123ID"
  >
    <div>
      Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Content WithChildrenRigthContent smoke-test 1`] = `
<div data-test-block="true">
  <div class="_card_nrlm6_5"
       data-color="white"
  >
    <div class="_cardContent_48t19_1">
      <div>
        <ul class="_list_1xbs1_1 _list_withBullet_1xbs1_8">
          <li class="_element_1b7zf_1">
            første element
          </li>
          <li class="_element_1b7zf_1">
            andre element
          </li>
        </ul>
      </div>
      <div class="_rightContent_48t19_51">
        <div class="_tag_1ciua_1 _tag_ochre_1ciua_22 _tag_medium_1ciua_34">
          <div class="_iconWrapper_1ciua_12"
               aria-hidden="true"
          >
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1ciua_12"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M11 9h2V7h-2v2Zm1 11c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8Zm0-18C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Zm-1 15h2v-6h-2v6Z">
              </path>
            </svg>
          </div>
          Endret av deg
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Content WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="_cardContent_48t19_1">
    <div class="dummyClassname">
      Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
    </div>
    <div class="_rightContent_48t19_51 dummyClassname">
      høyrejustert innhold
    </div>
  </div>
</div>
`;

exports[`Tester/Card/Content WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_cardContent_48t19_1"
       id="dummyIdForwardedFromRef"
  >
    <div>
      Gruppering av opplysninger i skjema, for eksempel inntekter, personer eller oppsummeringer.
    </div>
  </div>
</div>
`;
